src/objects/loan__Due_Payment__c.object
<CustomObject>
    <fields>
        <fullName>loan__Due__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due</label>
        <referenceTo>loan__Loan_account_Due_Details__c</referenceTo>
        <relationshipLabel>Due Payments</relationshipLabel>
        <relationshipName>Due_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Due Payments</relationshipLabel>
        <relationshipName>Due_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Due Payment</label>
    <nameField>
        <displayFormat>DPID-{0000000000}</displayFormat>
        <label>Due Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>